--- a/public/index.html
+++ b/public/index.html
@@ -3,70 +3,99 @@
 <head>
 
 	<title>
-		three.js WebRTC template
+		reframe release
 	</title>
 
 	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<!--	/*
+	<div id="meters">
+		<div id="instant">
+			<div class="label">Instant:</div>
+			<meter high="0.25" max="1" value="0"></meter>
+			<div class="value"></div>
+		</div>
+		<div id="slow">
+			<div class="label">Slow:</div>
+			<meter high="0.25" max="1" value="0"></meter>
+			<div class="value"></div>
+		</div>
+		<div id="clip">
+			<div class="label">Clip:</div>
+			<meter max="1" value="0"></meter>
+			<div class="value"></div>
+		</div>
+	</div>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js" integrity="sha512-oFOCo2/3DtjrJG4N27BjSLQWoiBv171sK6a+JiWjp/7agxC2nCUP358AqzxkBUb5jX8g6CYLPdSKQTbC0weCwA==" crossorigin="anonymous"></script>
-
-	<script src="js/libs/three.min.js"></script>
-	<script src="js/libs/soundmeter.js"></script>
-	<script src="js/libs/playerControls.js"></script>
-	<script src="js/libs/OrbitControls.js"></script>
-
-	<!-- ---------------- Custom Shader Code ------------------------ -->
-	<script id="vertexShader" type="x-shader/x-vertex">
-		uniform vec3 viewVector;
-		uniform float c;
-		uniform float p;
-		varying float intensity;
-		void main()
-		{
-			vec3 vNormal = normalize( normalMatrix * normal );
-			vec3 vNormel = normalize( normalMatrix * viewVector );
-			intensity = pow( c - dot(vNormal, vNormel), p );
-
-			gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
-		}
-	</script>
-
-	<!-- fragment shader a.k.a. pixel shader -->
-	<script id="fragmentShader" type="x-shader/x-vertex">
-		uniform vec3 glowColor;
-		varying float intensity;
-		void main()
-		{
-			vec3 glow = glowColor * intensity;
-			gl_FragColor = vec4( glow, 1.0 );
-		}
-	</script>
-	<!-- ----------------------------------------------------------- -->
+	<div>
+		<button type="button" id="startButton">Start</button>
+		<button type="button" id="stopButton" disabled>Stop</button>
+	</div>
 
 
-	<script src="js/environment.js"></script>
-	<script src="js/scene.js"></script>
-	<script src="js/index.js"></script>
-	<script src="js/libs/FBXLoader.js"></script>
-	<script src="js/libs/OBJLoader.js"></script>
-	<script src="js/libs/MTLLoader.js"></script>
-	<script src="js/libs/fflate.js"></script>
-	<script src="js/libs/Water.js"></script>
-	<script src="js/libs/RectAreaLightUniformsLib.js"></script>
+		<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+	*/-->
+
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js" integrity="sha512-oFOCo2/3DtjrJG4N27BjSLQWoiBv171sK6a+JiWjp/7agxC2nCUP358AqzxkBUb5jX8g6CYLPdSKQTbC0weCwA==" crossorigin="anonymous"></script>
+
+		<script src="js/libs/three.min.js"></script>
+		<script src="js/libs/soundmeter.js"></script>
+		<script src="js/libs/volume.js"></script>
+		<script src="js/libs/playerControls.js"></script>
+		<script src="js/libs/OrbitControls.js"></script>
+
+		<!-- ---------------- Custom Shader Code ------------------------ -->
+		<script id="vertexShader" type="x-shader/x-vertex">
+			uniform vec3 viewVector;
+			uniform float c;
+			uniform float p;
+			varying float intensity;
+			void main()
+			{
+				vec3 vNormal = normalize( normalMatrix * normal );
+				vec3 vNormel = normalize( normalMatrix * viewVector );
+				intensity = pow( c - dot(vNormal, vNormel), p );
+
+				gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+			}
+		</script>
+
+		<!-- fragment shader a.k.a. pixel shader -->
+		<script id="fragmentShader" type="x-shader/x-vertex">
+			uniform vec3 glowColor;
+			varying float intensity;
+			void main()
+			{
+				vec3 glow = glowColor * intensity;
+				gl_FragColor = vec4( glow, 1.0 );
+			}
+		</script>
+		<!-- ----------------------------------------------------------- -->
+
+
+		<script src="js/environment.js"></script>
+		<script src="js/scene.js"></script>
+		<script src="js/index.js"></script>
+		<script src="js/libs/FBXLoader.js"></script>
+		<script src="js/libs/OBJLoader.js"></script>
+		<script src="js/libs/MTLLoader.js"></script>
+		<script src="js/libs/fflate.js"></script>
+		<script src="js/libs/Water.js"></script>
+		<script src="js/libs/RectAreaLightUniformsLib.js"></script>
 
 
 
-	<style>
-		body {
-			overflow: hidden;
-		}
+		<style>
+			body {
+				overflow: hidden;
+			}
 
-		#info {
-			padding: 1em;
-			border: 1em;
-			color: rgb(223, 223, 223);
-		}
-	</style>
+			#info {
+				padding: 1em;
+				border: 1em;
+				color: rgb(223, 223, 223);
+			}
+		</style>
 
 
 </head>
